--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="sobremi">
             <h1 class="titulo">Sobre Mi</h1>
                 <div class="col-md-3">
-                    <img class="yo" src="img/yo.png">
+                    <img class="yo" src="img/yo.PNG">
                 </div>
                 <div class="col-md-9">
                     <h1 class="presen">Hola soy una coder</h1>
