--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             <div id="proyectos">
             <h1 class="titulo">Mis Proyectos </h1>
                 <ul class="misproyect">
-                    <li class="col-md-6"><img class="primero" src="img/perfil.png"><p>Prettyfy</p></li>
-                    <li class="col-md-6"><img class="primero" src="img/TheGentleman.png"><p>The Gentleman</p></li>
-                    <li class="col-md-6"><img class="primero" src="img/flores.png"><p>Responsive</p></li>
-                    <li class="col-md-6"><img class="primero" src="img/danza.png"><p>Academia de Baile</p></li>
+                    <li class="col-md-6"><img class="primero" src="img/perfil.PNG"><p>Prettyfy</p></li>
+                    <li class="col-md-6"><img class="primero" src="img/TheGentleman.PNG"><p>The Gentleman</p></li>
+                    <li class="col-md-6"><img class="primero" src="img/flores.PNG"><p>Responsive</p></li>
+                    <li class="col-md-6"><img class="primero" src="img/danza.PNG"><p>Academia de Baile</p></li>
 
                 </ul>
             </div>
