--- a/index.html
+++ b/index.html
@@ -16,69 +16,101 @@
         <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="css/responsive.css">
-<body>
-<div class="container">
-    <p class="olis">Portafolio</p>
-        <div class="row">
-            <div class="col-md-12">
-                <button type="button" a href="index.html"   class="btn"><a href="#Home"> Home</a></button>
-                <button type="button" class="btn"><a href="#sobremi"> Sobre mí</a></button>
-                <button type="button" class="btn"><a href="#proyectos">Proyectos</a></button>
-                <button type="button" class="btn"><a href="#conocimientos"> Conocimientos</a></button>
-                <button type="button"  class="btn"><a href="#contacto">Contacto </a></button>
+        <link href='https://fonts.googleapis.com/css?family=Marcellus+SC' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Luckiest+Guy' rel='stylesheet' type='text/css'>
+       <link href='https://fonts.googleapis.com/css?family=Ruluko' rel='stylesheet' type='text/css'>
 
+<body>
+
+        <div class="row home">
+            <div class="container">
+                <div class="col-md-12 menu">
+                    <button type="button" a href="index.html"   class="btn"><a href="#Home"> HOME</a></button>
+                    <button type="button" class="btn"><a href="#sobremi"> SOBRE MI</a></button>
+                    <button type="button" class="btn"><a href="#proyectos">PROYECTOS</a></button>
+                    <button type="button" class="btn"><a href="#conocimientos"> CONOCIMIENTOS</a></button>
+                    <button type="button"  class="btn"><a href="#contacto">CONTACTO </a></button>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div id="sobremi">
-            <h1 class="titulo">Sobre Mi</h1>
+        <div class="row portada">
+            <div class="container">
+                <div class="medio">Hola mi nombre es Marisol Oviedo Cjula</div>
+                <div class="sub">Bienvenido a mi página web</div>
+            </div>
+        </div>
+        <div class="row" id="sobremi">
+            <div class="container">
+                <div class="col-md-4 titulo">Mas sobre mí 
+                </div>
                 <div class="col-md-3">
                     <img class="yo" src="img/yo.PNG">
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-4">
                     <h1 class="presen">Hola soy una coder</h1>
-                    <p class="presen">Me llamo Marisol soy estudiante de laboratoria , soy una persona soñadora y positiva , me gusta ayudar y ser colaboradora entre mis compañeras , me gusta los animales .</p>
+                    <p class="presen">Me llamo Marisol soy estudiante de laboratoria , soy una persona soñadora y positiva , me gusta ayudar y ser colaboradora entre mis compañeras , me gusta los animales .
+                    Soy curiosa, apasionada con la capacidad de aprender cosas nuevas y trabajar en equipo .</p>
+                </div> 
+            </div>
+        </div>
+        <div class="row" id="proyectos">
+            <div class="container">
+                <div class="col-md-6 diferente">Mis Proyectos </div>
+                <div class="col-md-6 blanco" >
+                Estos son los 4 proyectos de los que más me gusto y aprendí mucho más.
+                </div>
+                <div class="col-md-12">
+
+                <ul class="misproyect">
+                    <li class="col-md-6 work"><a href="file:///C:/Users/Juana%20Quispe/Documents/Prettyfy-master/perfil.html"><img class="primero" src="img/perfil.PNG"><p>Prettyfy</p></a></li>
+                    <li class="col-md-6 work"><a href="file:///C:/Users/Juana%20Quispe/Documents/Mi-examen-master/index.html"><img class="primero" src="img/TheGentleman.PNG"><p>The Gentleman</p></a></li>
+                    <li class="col-md-6 work"><a href="file:///C:/Users/Juana%20Quispe/Documents/Lab-E-comunidad-master/index.html"><img class="primero" src="img/Captura.PNG"><p>Ecomunidad</p></a></li>
+                    <li class="col-md-6 work"><a href="file:///C:/Users/Juana%20Quispe/Documents/Lab-Escueladanza-master/blog.html"><img class="primero" src="img/danza.PNG"><p>Academia de Baile</p></a></li>
+
+                </ul>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div id="proyectos">
-            <h1 class="titulo">Mis Proyectos </h1>
-                <ul class="misproyect">
-                    <li class="col-md-6"><img class="primero" src="img/perfil.PNG"><p>Prettyfy</p></li>
-                    <li class="col-md-6"><img class="primero" src="img/TheGentleman.PNG"><p>The Gentleman</p></li>
-                    <li class="col-md-6"><img class="primero" src="img/flores.PNG"><p>Responsive</p></li>
-                    <li class="col-md-6"><img class="primero" src="img/danza.PNG"><p>Academia de Baile</p></li>
+        <div class="row" id="conocimientos">
+            <div class="container">
+                <div class="col-md-6 titulo"><strong>Mis Conocimientos</strong></div>
+                <div class="col-md-6 presen">
+                Estos son mis conocimientos que yo adquiri durante las clases que recibí.
+                </div>
+                <div class="col-md-12">
+                    <ul class="habilidades">
+                        <li class="col-md-3 hb"><img class="segundo" src="img/html.png"><div class="presen"> HTML5</div><div class="progress">
+                        <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%"> <span class="sr-only">60% Complete (danger)</span></div></div></li>
+                        <li class="col-md-3 hb"><img class="segundo" src="img/descarga.jpg"><div class="presen"> CSS</div><div class="progress">
+                        <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%"><span class="sr-only">60% Complete (danger)</span></div></div>
+                        </li>
+                        <li class="col-md-3 hb"><img class="segundo" src="img/jade.jpg"><div class="presen"> JADE</div><div class="progress">
+                        <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"><span class="sr-only">40% Complete (danger)</span></div></div></li>
+                        <li class="col-md-3 hb"><img class="segundo" src="img/sass.png"><div class="presen"> SASS</div><div class="progress"><div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"><span class="sr-only">40% Complete (danger)</span></div></div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row" id="contacto">
+            <div class="container">
+                <div class="col-md-6 diferente">Contacto 
+                </div>
+                <div class="col-md-6 blanco">Sígueme en mis redes sociales o mándame un mensaje.</div>
+                <div class="col-md-12">
+                    <div class="col-md-4"><img class="mujer" src="img/computador.png"></div>
+                    <div class="col-md-8    contact">
+                    <div class="borde"><li class="col-md-3"><img class="tercero" src="img/celular.png"><p class="social">947573102</p></li></div>
+                    <div class="borde"><li class="col-md-3 "><img class="tercero" src="img/github.png"><p class="social">Github</p></li></div>
 
-                </ul>
+                    <div class="borde"><li class="col-md-3"><img class="tercero" src="img/carta.png"><p class="social">keiragroban@gmail.com</p></li></div>
+                </div>
             </div>
         </div>
-        <div class="row">
-
-            <div id="conocimientos">
-            <h1 class="titulo">Mis Conocimientos</h1>
-            <ul class="habilidades">
-                <li class="col-md-3"><img class="segundo" src="img/html.png"><p> HTML5</p></li>
-                <li class="col-md-3"><img class="segundo" src="img/descarga.jpg"><p> CSS</p></li>
-                <li class="col-md-3"><img class="segundo" src="img/jade.jpg"><p> JADE</p></li>
-                <li class="col-md-3"><img class="segundo" src="img/sass.png"><p> SASS</p></li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div id="contacto">
-                <h1 class="titulo">Contacto</h1>
-                <ul class="contact">
-                    <li class="col-md-3"><img class="tercero" src="img/celular.jpg"><p>Celular</p></li>
-                    <li class="col-md-3"><img class="tercero" src="img/github.png"><p>Github</p></li>
-                    <li class="col-md-3"><img class="tercero" src="img/email.jpg"><p>Correo</p></li>
-                </ul>
-            </div>
-        </div>
+    </div>
 
 </body>
 
 <!-- 19 de agosto  a las 4:30 pm en el auditorio de ucsp san lazaro  -->
 <!-- lunes 8 martes 9 y lunes 15 de 2 a 5pm -->
 <!-- csswarp -->
-
