--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <img src="img/compu.gif">
         
         </div>              
 
@@ -57,8 +56,8 @@
         <div class="row portada">
             <div class="container">
 
-                <div class="medio">Hola mi nombre es Marisol Oviedo Cjula <span id="smi"></span></div>
-                <div class="sub">Bienvenido  a mi página web.</div>
+                <div class="medio">Hola mi nombre es:  <span id="smi"></span></div>
+                <div class="sub">Marisol Oviedo Cjula</div>
             </div>
         </div>
 
@@ -124,7 +123,7 @@
                 </div>
                 <div class="col-md-6 blanco">Sígueme en mis redes sociales o mándame un mensaje.</div>
                 <div class="col-md-12">
-                    <div class="col-md-4"><img class="mujer" src="img/gato.gif"></div>
+                    <div class="col-md-4"><img class="mujer" src="img/computador.png"></div>
                     <div class="col-md-8    contact">
                     <div class="borde"><li class="col-md-3"><img class="tercero" src="img/celular.png"><p class="social">947573102</p></li></div>
                     <div class="borde"><li class="col-md-3 "><img class="tercero" src="img/github.png"><p class="social">Github</p></li></div>
