--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Serif:700italic,400italic,400,700" type="text/css">
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
+        <link rel="stylesheet" href="css/dist/font-awesome.css">
         <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <!-- <link rel="icon" type="image/png" href="img/about/faviconV.png"> -->
         <link rel="stylesheet" href="css/dist/bootstrap.css">
@@ -87,10 +87,10 @@
                 </div>
                 <div class="col-md-12">
                 <ul class="misproyect">
-                    <li class="col-md-6 work"><a href="http://marisol3.github.io/Prettyfy.github.io/"><img class="primero" src="img/perfil.PNG"><p class="trabajos">Prettyfy</p></a></li>
-                    <li class="col-md-6 work"><a href="http://marisol3.github.io/Gentleman.github.io/."><img class="primero" src="img/TheGentleman.PNG"><p class="trabajos">The Gentleman</p></a></li>
-                    <li class="col-md-6 work"><a href="https://marisol3.github.io/Ecomunidad.github.io/"><img class="primero" src="img/Captura.PNG"><p class="trabajos">Ecomunidad</p></a></li>
-                    <li class="col-md-6 work"><a href="https://marisol3.github.io/Escueladedanza.github.io/."><img class="primero" src="img/danza.PNG"><p id="conoci"></p><p class="trabajos">
+                    <li class="col-md-6 work"><a target="_blank" href="http://marisol3.github.io/Prettyfy.github.io/"><img class="primero" src="img/perfil.PNG"><p class="trabajos">Prettyfy</p></a></li>
+                    <li class="col-md-6 work"><a target="_blank"   href="http://marisol3.github.io/Gentleman.github.io/."><img class="primero" src="img/TheGentleman.PNG"><p class="trabajos">The Gentleman</p></a></li>
+                    <li class="col-md-6 work"><a target="_blank"  href="https://marisol3.github.io/Ecomunidad.github.io/"><img class="primero" src="img/Captura.PNG"><p class="trabajos">Ecomunidad</p></a></li>
+                    <li class="col-md-6 work"><a target="_blank"href="https://marisol3.github.io/Escueladedanza.github.io/."><img class="primero" src="img/danza.PNG"><p id="conoci"></p><p class="trabajos">
                     Academia de Baile</p></a></li>
                 </ul>
                 </div>
@@ -126,12 +126,17 @@
                     <div class="col-md-4"><img class="mujer" src="img/computador.png"></div>
                     <div class="col-md-8    contact">
                     <div class="borde"><li class="col-md-3"><img class="tercero" src="img/celular.png"><p class="social">947573102</p></li></div>
-                    <div class="borde"><li class="col-md-3 "><img class="tercero" src="img/github.png"><p class="social">Github</p></li></div>
+                    
+                    <div class="borde"><li class="col-md-3 "><a target="_blank" href="https://github.com/Marisol3"><img class="tercero" src="img/github.png"></a><p class="social">Marisol3</p></li></div>
+                    
                     <div class="borde"><li class="col-md-3"><img class="tercero" src="img/carta.png"><p class="social">keiragroban@gmail.com</p></li></div>
                 </div>
             </div>
-        </div>
+        </div><p class="center">©Marisol - 2016</p>
     </div>
+</body>
+</head>
+</html>
 
 
 
