detalles de textura

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <link href='https://fonts.googleapis.com/css?family=Marcellus+SC' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Luckiest+Guy' rel='stylesheet' type='text/css'>
        <link href='https://fonts.googleapis.com/css?family=Ruluko' rel='stylesheet' type='text/css'>
+       <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 <body>
         <div class="row home">
             <div class="container">
@@ -63,7 +66,7 @@
 
         <div class="row" id="sobremi">
             <div class="container">
-                <div class="col-md-4 titulo">Mas sobre mí 
+                <div class="col-md-4 titulo">Más sobre mí 
                 </div>
                 <div class="col-md-3">
                     <img class="yo" src="img/yo.PNG">
